# AVDirectorSDK

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  av_director_demo
lib/CMakeModules/: FindFFmpeg.cmake
lib/src/: Core.cc  Core.hpp  Decoder.cc  Decoder.hpp  Demuxer.cc  Demuxer.hpp  Encoder.cc  Encoder.hpp  Muxer.cc  Muxer.hpp  av_director_context.cc  av_director_context.hpp  merlin.cc  merlin.hpp  type.hpp
src/: CMakeLists.txt  av_director_context.cc  av_director_context.hpp  main.cpp
test/: CMakeLists.txt  testmain.cpp
